[package]
name = "portalnet"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/portalnet"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Core library for Trin."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
crossbeam-channel = "0.5.13"
delay_map.workspace = true
discv5.workspace = true
ethereum_ssz.workspace = true
ethportal-api.workspace = true
fnv = "1.0.7"
futures.workspace = true
hex.workspace = true
igd-next = "0.14.2"
itertools = "0.12.1"
lazy_static.workspace = true
leb128 = "0.2.1"
local-ip-address = "0.5.6"
lru = "0.7.8"
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
smallvec = "1.8.0"
ssz_types.workspace = true
stunclient = "0.4.1"
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing.workspace = true
trin-metrics.workspace = true
trin-storage.workspace = true
trin-utils.workspace = true
trin-validation.workspace = true
utp-rs.workspace = true

[target.'cfg(windows)'.dependencies]
uds_windows.workspace = true

[dev-dependencies]
env_logger.workspace = true
quickcheck.workspace = true
rstest.workspace = true
serial_test.workspace = true
tempfile.workspace = true
test-log.workspace = true
tokio-test.workspace = true
tracing-subscriber.workspace = true
