[package]
name = "rpc"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/rpc"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Implementations of jsonrpsee server API traits for Trin and server interface"
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
discv5.workspace = true
eth_trie.workspace = true
ethportal-api.workspace = true
hyper.workspace = true
portalnet.workspace = true
reth-ipc.workspace = true
revm.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] }
tracing.workspace = true
trin-evm.workspace = true
trin-utils.workspace = true
trin-validation.workspace = true
