[package]
name = "rpc"
description = "Implementations of jsonrpsee server API traits for Trin and server interface"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy = { workspace = true, features = ["rpc-types-eth"] }
discv5.workspace = true
eth_trie.workspace = true
ethportal-api.workspace = true
http = "1.1.0"
portalnet.workspace = true
reth-ipc.workspace = true
revm.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
tracing.workspace = true
trin-evm.workspace = true
trin-utils.workspace = true
trin-validation.workspace = true
