[package]
name = "trin-beacon"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/trin-beacon"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Beacon network subprotocol for Trin."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
alloy.workspace = true
anyhow.workspace = true
chrono.workspace = true
discv5.workspace = true
ethereum_ssz.workspace = true
ethportal-api.workspace = true
light-client.workspace = true
parking_lot.workspace = true
portalnet.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
ssz_types.workspace = true
tokio.workspace = true
tracing.workspace = true
tree_hash.workspace = true
trin-metrics.workspace = true
trin-storage.workspace = true
trin-validation.workspace = true
utp-rs.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
snap.workspace = true
