[package]
name = "trin-beacon"
description = "Beacon network subprotocol for Trin."
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
chrono.workspace = true
discv5.workspace = true
ethereum_ssz.workspace = true
ethportal-api.workspace = true
light-client.workspace = true
parking_lot.workspace = true
portalnet.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
ssz_types.workspace = true
tokio.workspace = true
tracing.workspace = true
tree_hash.workspace = true
trin-metrics.workspace = true
trin-storage.workspace = true
trin-validation.workspace = true
utp-rs.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
snap.workspace = true
