[package]
name = "trin-bridge"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/main/trin-bridge"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Bridge node for the Portal Network"
authors = ["https://github.com/ethereum/trin/graphs/contributors"]


[dependencies]
anyhow = "1.0.68"
clap = { version = "4.2.1", features = ["derive"] }
discv5 = { version = "0.2.1", features = ["serde"]}
ethportal-api = { path = "../ethportal-api" }
ethereum-types = "0.12.1"
eth2_ssz = "0.4.0"
eth2_ssz_derive = "0.3.0"
eth2_ssz_types = "0.2.1"
jsonrpsee = {version="0.16.2", features = ["async-client", "client", "macros", "server"]}
serde_json = "1.0.89"
surf = "2.3.2"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
trin-types = "0.1.1-alpha.1"
trin-utils = "0.1.1-alpha.1"
trin-validation = { path = "../trin-validation" }

[dev-dependencies]
rstest = "0.11.0"
