[package]
name = "trin-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/trin-cli"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "A CLI tool for interacting with a Trin client."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
anyhow = "1.0.68"
base64 = "0.13.0"
clap = { version = "4.2.1", features = ["derive"] }
ethereum-types = "0.12.1"
ethportal-api = { path = "../ethportal-api" }
jsonrpc = "0.12.0"
nanotemplate = "0.3.0"
[target.'cfg(not(windows))'.dependencies]
reth-ipc = { version = "0.1.0", git = "https://github.com/paradigmxyz/reth.git"}
serde = "1.0.150"
serde_json = { version = "1.0.89", features = ["raw_value"] }
thiserror = "1.0.29"
tokio = { version = "1.14.0", features = ["full"] }
trin-types = { path = "../trin-types" }
trin-utils = { path = "../trin-utils" }
ureq = { version = "2.5.0", features = ["json"] }
url = "2.3.1"

[[bin]]
name="trin-cli"
path="src/main.rs"
