[package]
name = "trin-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.0"

[dependencies]
anyhow = "1.0.52"
async-recursion = "1.0.0"
async-trait = "0.1.53"
base64 = "0.13.0"
bytes = "1.1.0"
clap = "2.33.3"
ctrlc = "3.1.8"
delay_map = "0.1.1"
directories = "3.0"
discv5 = { git = "https://github.com/sigp/discv5.git", branch = "master" }
env_logger = "0.8.2"
eth_trie = "0.1.0"
eth2_ssz = "0.4.0"
eth2_ssz_derive = "0.3.0"
eth2_ssz_types = "0.2.1"
ethereum-types = "0.12.1"
fnv = "1.0.7"
futures = "0.3.13"
hex = "0.4.3"
hmac-sha256 = "1.1.1"
httparse = "1.5.1"
keccak-hash = "0.8.0"
lazy_static = "1.4.0"
log = "0.4.14"
num = "0.4.0"
parking_lot = "0.11.2"
prometheus_exporter = "0.8.4"
rand = "0.8.4"
rlp = "0.5.0"
rlp-derive = "0.1.0"
rocksdb = "0.18.0"
rstest = "0.11.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.59"
serial_test = "0.5.1"
sha2 = "0.10.1"
smallvec = "1.8.0"
stunclient = "0.1.2"
structopt = "0.3"
sha3 = "0.9.1"
tempdir = "0.3.7"
thiserror = "1.0.29"
threadpool = "1.8.1"
tokio = { version = "1.8.0", features = ["full"] }
tokio-test = "0.4.2"
tokio-util = "0.6.8"
tracing = "0.1.26"
tracing-futures = "0.2.5"
uint = { version = "0.8.5", default-features = false }
ureq = { version = "2.2.0", features = ["json"] }
validator = { version = "0.13.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
ipconfig = "0.2.2"
uds_windows = "1.0.1"

[target.'cfg(unix)'.dependencies]
interfaces = "0.0.7"

[dependencies.rusqlite]
version = "0.26.3"
features = ["bundled"]

[dev-dependencies]
quickcheck = "1.0.3"
ntest = "0.8.0"
