[package]
name = "trin-execution"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/trin-execution"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "execution-layer"]
categories = ["cryptography::cryptocurrencies"]
description = "Trin's execution used for gossiping state and soon an execution layer client for Ethereum?"
authors = ["https://github.com/ethereum/trin/graphs/contributors"]


[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
ethportal-api.workspace = true
e2store.workspace = true
eth_trie.workspace = true
hashbrown = "0.14.0"
lazy_static.workspace = true
parking_lot.workspace = true
prometheus_exporter.workspace = true
rayon = "1.10.0"
revm.workspace = true
revm-inspectors = "0.6"
revm-primitives.workspace = true
reth-rpc-types.workspace = true
rocksdb = "0.22.0"
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
surf.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
trin-utils.workspace = true

[dev-dependencies]
test-log.workspace = true
tracing-test.workspace = true
