[package]
name = "trin-metrics"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Trin metrics"

[dependencies]
anyhow.workspace = true
ethportal-api.workspace = true
prometheus_exporter.workspace = true
lazy_static.workspace = true
