[package]
name = "trin-state"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/trin-state"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "State network subprotocol for Trin."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
alloy-primitives = { workspace = true, features = ["getrandom"] }
alloy-rlp.workspace = true
anyhow.workspace = true
discv5.workspace = true
eth_trie.workspace = true
ethportal-api.workspace = true
keccak-hash.workspace = true
parking_lot.workspace = true
portalnet.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
trin-storage.workspace = true
trin-validation.workspace = true
utp-rs.workspace = true

[dev-dependencies]
env_logger.workspace = true
rstest.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serial_test.workspace = true
test-log.workspace = true
tracing-subscriber.workspace = true
trin-utils.workspace = true
