[package]
name = "trin-storage"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/trin-storage"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Storage library for Trin."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
alloy.workspace = true
discv5.workspace = true
ethportal-api.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rand.workspace = true
rusqlite.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
trin-metrics.workspace = true

[dev-dependencies]
anyhow.workspace = true
quickcheck.workspace = true
rstest.workspace = true
