[package]
name = "trin-storage"
description = "Storage library for Trin."
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy.workspace = true
discv5.workspace = true
ethportal-api.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rand.workspace = true
rusqlite.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
trin-metrics.workspace = true

[dev-dependencies]
anyhow.workspace = true
quickcheck.workspace = true
rstest.workspace = true
