[package]
name = "trin-types"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/main/trin-types"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Types library for Trin."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
base64 = "0.13.0"
discv5 = { version = "0.2.1", features = ["serde"]}
ethereum-types = "0.12.1"
eth2_ssz = "0.4.0"
eth2_ssz_derive = "0.3.0"
eth2_ssz_types = "0.2.1"
rlp = "0.5.0"
serde_json = "1.0.89"
validator = { version = "0.13.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.9.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
test-log = { version = "0.2.11", features = ["trace"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
