[package]
name = "trin-types"
version = "0.1.1-alpha.1"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/main/trin-types"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Types library for Trin."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
anyhow = "1.0.68"
base64 = "0.13.0"
bytes = "1.3.0"
clap = "2.33.3"
discv5 = { version = "0.2.1", features = ["serde"]}
eth_trie = "0.1.0"
ethereum-types = "0.12.1"
ethnum = "1.3.2"
eth2_ssz = "0.4.0"
eth2_ssz_derive = "0.3.0"
eth2_ssz_types = "0.2.1"
keccak-hash = "0.8.0"
lazy_static = "1.4.0"
quickcheck = "1.0.3"
rand = "0.8.5"
rlp = "0.5.0"
rlp-derive = "0.1.0"
serde = { version = "1.0.150", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0.89"
serde_yaml = "0.9.17"
sha2 = "0.10.1"
sha3 = "0.9.1"
snap = "1.1.0"
structopt = "0.3.26"
stremio-serde-hex = "0.1.0"
superstruct = "0.7.0"
tree_hash = "0.4.0"
tree_hash_derive = "0.4.0"
tokio = { version = "1.14.0", features = ["full"] }
trin-utils = "0.1.1-alpha.1"
ureq = { version = "2.5.0", features = ["json"] }
url = "2.3.1"
validator = { version = "0.13.0", features = ["derive"] }
thiserror = "1.0.40"

[dev-dependencies]
env_logger = "0.9.0"
quickcheck = "1.0.3"
rstest = "0.16.0"
test-log = { version = "0.2.11", features = ["trace"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
