[package]
name = "trin-utils"
version = "0.1.1-alpha.1"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/main/trin-utils"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Utils library for Trin."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]
build = "build.rs"

[dependencies]
shadow-rs = "0.27"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

[build-dependencies]
shadow-rs = "0.27"

[target.'cfg(windows)'.dependencies]
# The crates for detecting whether the terminal supports colors are OS-specific.
ansi_term = "0.12"

[target.'cfg(not(windows))'.dependencies]
# The crates for detecting whether the terminal supports colors are OS-specific.
atty = "0.2.14"
