[package]
name = "trin-utils"
description = "Utils library for Trin."
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
directories.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
# The crates for detecting whether the terminal supports colors are OS-specific.
ansi_term = "0.12"

[target.'cfg(not(windows))'.dependencies]
# The crates for detecting whether the terminal supports colors are OS-specific.
atty = "0.2.14"
