[package]
name = "trin-validation"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/trin-validation"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Validation layer for the Portal Network data."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
alloy-primitives = { version = "0.7.0", features = ["ssz"] }
anyhow = "1.0.68"
eth2_hashing = "0.2.0"
ethereum_ssz = "0.5.3"
ethereum_ssz_derive = "0.5.3"
ethportal-api = { path = "../ethportal-api" }
lazy_static = "1.4.0"
rust-embed = "6.6.1"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
ssz_types = { git = "https://github.com/morph-dev/kolby_ssz_types.git", rev = "e6129bf860cea549a510281222a13154f3370ac1" }
tokio = { version = "1.14.0", features = ["full"] }
tree_hash = { git = "https://github.com/KolbyML/tree_hash.git", rev = "8aaf8bb4184148768d48e2cfbbdd0b95d1da8730" }
tree_hash_derive = { git = "https://github.com/KolbyML/tree_hash.git", rev = "8aaf8bb4184148768d48e2cfbbdd0b95d1da8730" }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
alloy-rlp = "0.3.4"
rstest = "0.18.2"
