[package]
name = "trin-validation"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/trin-validation"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Validation layer for the Portal Network data."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
alloy.workspace = true
anyhow.workspace = true
enr = "0.10.0"
ethereum_hashing = "0.7.0"
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
ethportal-api.workspace = true
lazy_static.workspace = true
rust-embed = "6.6.1"
serde.workspace = true
serde_json.workspace = true
ssz_types.workspace = true
tokio.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros = "1.0.0"
rstest.workspace = true
serde_yaml.workspace = true

