[package]
name = "trin"
version = "0.1.0"
authors = ["Jacob Kaufmann <jacobkaufmann18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.0", features = ["full"] }
trin-history = { path = "../trin-history" }
trin-state = { path = "../trin-state" }
