[package]
name = "utp-testing"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/utp-testing"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "A testing suite for the UTP protocol."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.2.1", features = ["derive"] }
discv5 = { version = "0.4.1", features = ["serde"] }
ethportal-api = { path="../ethportal-api"}
jsonrpsee = {version = "0.20.0", features = ["full"]}
portalnet = { path = "../portalnet" }
rand = "0.8.4"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
trin-utils = { path = "../trin-utils" }
tokio = {version = "1.14.0", features = ["full"]}
utp-rs = { git = "https://github.com/ethereum/utp", tag = "v0.1.0-alpha.12" }

[[bin]]
name = "utp-test-app"
path = "src/bin/test_app.rs"

[[bin]]
name = "utp-test-suite"
path = "src/bin/test_suite.rs"
