[package]
name = "utp-testing"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/utp-testing"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "A testing suite for the UTP protocol."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
discv5.workspace = true
ethportal-api.workspace = true
jsonrpsee = { workspace = true, features = ["full"]}
portalnet.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
trin-utils.workspace = true
trin-validation.workspace = true
utp-rs.workspace = true

[[bin]]
name = "utp-test-app"
path = "src/bin/test_app.rs"

[[bin]]
name = "utp-test-suite"
path = "src/bin/test_suite.rs"
