[package]
name = "utp-testing"
description = "A testing suite for the UTP protocol."
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
discv5.workspace = true
ethportal-api.workspace = true
jsonrpsee = { workspace = true, features = ["full"]}
portalnet.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
trin-utils.workspace = true
trin-validation.workspace = true
utp-rs.workspace = true

[[bin]]
name = "utp-test-app"
path = "src/bin/test_app.rs"

[[bin]]
name = "utp-test-suite"
path = "src/bin/test_suite.rs"
